Tidy up test a little
Signed-off-by: Tom Bentley <tbentley@redhat.com>